--- a/src/app/features/crm/components/service-desk/request-tracking/request-tracking.component.html
+++ b/src/app/features/crm/components/service-desk/request-tracking/request-tracking.component.html
@@ -44,17 +44,16 @@
                   type="text"
                   class="form-control"
                   formControlName="owner"
-                  value="{{ selectedMainUser?.name }}"
+                  value="{{selectedMainUser?.name}}"
                   id="owner"
-                  readonly
                 />
                 <button
                   class="btn btn-outline-secondary"
                   type="button"
                   id="button-addon2"
-                  (click)="openAllUsersModal()"
+                  (click)="openAllUsersModal('requestOwner')"
                 >
-                  <i class="fa-solid fa-angle-double-down"></i>
+                  <i class="fa-solid fa-angle-double-down open-all-users-modal"></i>
                 </button>
               </div>
             </div>
@@ -73,20 +72,28 @@
                 <input
                   type="text"
                   class="form-control"
-                  formControlName="owner"
-                  value="{{ selectedMainUser?.name }}"
-                  id="owner"
-                  readonly
+                  formControlName="entity"
+                  id="entity"
                 />
                 <button
                   class="btn btn-outline-secondary"
                   type="button"
                   id="button-addon"
-                  (click)="openAllUsersModal()"
+                  (click)="openAllUsersModal('accType')"
                 >
-                  <i class="fa-solid fa-angle-double-down"></i>
+                  <i class="fa-solid fa-angle-double-down open-all-users-modal"></i>
                 </button>
               </div>
+            </div>
+            <div class="col-lg-2 col-sm-6 col-6 align-content-center">
+              <button
+                class="btn btn-primary"
+                type="button"
+                id="clear"
+                (click)="clearRequestTrackingSort()"
+              >
+                Clear
+              </button>
             </div>
           </div>
         </form>
@@ -114,78 +121,97 @@
           dataKey="code"
           scrollHeight="400px"
           currentPageReportTemplate="{first} - {last} of {totalRecords}"
-          [globalFilterFields]="['campaign.campaignName']"
+          [globalFilterFields]="['accountDto.name', 'source', 'desc', 'policyNo', 'date', 'summary', 'dueDate', 'mainStatus',
+          'assigneeDto.name', 'closedBy', 'reporter', 'communicationMode', 'refNumber', 'comments',
+           'accountDto.shortDescription', 'accountDto.physicalAddress', 'accountDto.emailAddress', 'accountDto.smsNumber',
+           'ownerDto.name', 'solution']"
         >
 
           <ng-template pTemplate="header">
             <tr>
-              <th pSortableColumn="campaign.campaignName">{{'serviceDesk.accountName'| translate }} <p-sortIcon field="campaign.campaignName"></p-sortIcon></th>
+              <th pSortableColumn="accountDto.name">{{'serviceDesk.accountName'| translate }} <p-sortIcon field="accountDto.name"></p-sortIcon></th>
               <th pSortableColumn="campaign.objective">{{'serviceDesk.requestType'| translate }} <p-sortIcon field="campaign.objective"></p-sortIcon></th>
-              <th pSortableColumn="campaign.description">{{'serviceDesk.source'| translate }} <p-sortIcon field="campaign.description"></p-sortIcon></th>
-              <th pSortableColumn="campaign.campaignName">{{'serviceDesk.description'| translate }} <p-sortIcon field="campaign.campaignName"></p-sortIcon></th>
-              <th pSortableColumn="campaign.objective">{{'serviceDesk.policyNumber'| translate }} <p-sortIcon field="campaign.objective"></p-sortIcon></th>
-              <th pSortableColumn="campaign.description">{{'serviceDesk.creationDate'| translate }} <p-sortIcon field="campaign.description"></p-sortIcon></th>
-              <th pSortableColumn="campaign.campaignName">{{'serviceDesk.summary'| translate }} <p-sortIcon field="campaign.campaignName"></p-sortIcon></th>
-              <th pSortableColumn="campaign.objective">{{'serviceDesk.dueDate'| translate }} <p-sortIcon field="campaign.objective"></p-sortIcon></th>
-              <th pSortableColumn="campaign.description">{{'serviceDesk.status'| translate }} <p-sortIcon field="campaign.description"></p-sortIcon></th>
-              <th pSortableColumn="campaign.campaignName">{{'serviceDesk.assignee'| translate }} <p-sortIcon field="campaign.campaignName"></p-sortIcon></th>
-              <th pSortableColumn="campaign.objective">{{'serviceDesk.closedByAssignee'| translate }} <p-sortIcon field="campaign.objective"></p-sortIcon></th>
-              <th pSortableColumn="campaign.description">{{'serviceDesk.closedByInitiator'| translate }} <p-sortIcon field="campaign.description"></p-sortIcon></th>
-              <th pSortableColumn="campaign.campaignName">{{'serviceDesk.communicationMode'| translate }} <p-sortIcon field="campaign.campaignName"></p-sortIcon></th>
-              <th pSortableColumn="campaign.objective">{{'serviceDesk.referenceNumber'| translate }} <p-sortIcon field="campaign.objective"></p-sortIcon></th>
-              <th pSortableColumn="campaign.description">{{'serviceDesk.comments'| translate }} <p-sortIcon field="campaign.description"></p-sortIcon></th>
-              <th pSortableColumn="campaign.campaignName">{{'serviceDesk.shortDescription'| translate }} <p-sortIcon field="campaign.campaignName"></p-sortIcon></th>
-              <th pSortableColumn="campaign.objective">{{'serviceDesk.physicalAddress'| translate }} <p-sortIcon field="campaign.objective"></p-sortIcon></th>
-              <th pSortableColumn="campaign.description">{{'serviceDesk.email'| translate }} <p-sortIcon field="campaign.description"></p-sortIcon></th>
-              <th pSortableColumn="campaign.campaignName">{{'serviceDesk.solutionSMSNumber'| translate }} <p-sortIcon field="campaign.campaignName"></p-sortIcon></th>
-              <th pSortableColumn="campaign.objective">{{'serviceDesk.owner'| translate }} <p-sortIcon field="campaign.objective"></p-sortIcon></th>
+              <th pSortableColumn="source">{{'serviceDesk.source'| translate }} <p-sortIcon field="source"></p-sortIcon></th>
+              <th pSortableColumn="desc">{{'serviceDesk.description'| translate }} <p-sortIcon field="desc"></p-sortIcon></th>
+              <th pSortableColumn="policyNo">{{'serviceDesk.policyNumber'| translate }} <p-sortIcon field="policyNo"></p-sortIcon></th>
+              <th pSortableColumn="date">{{'serviceDesk.creationDate'| translate }} <p-sortIcon field="date"></p-sortIcon></th>
+              <th pSortableColumn="summary">{{'serviceDesk.summary'| translate }} <p-sortIcon field="summary"></p-sortIcon></th>
+              <th pSortableColumn="dueDate">{{'serviceDesk.dueDate'| translate }} <p-sortIcon field="dueDate"></p-sortIcon></th>
+              <th pSortableColumn="mainStatus">{{'serviceDesk.status'| translate }} <p-sortIcon field="mainStatus"></p-sortIcon></th>
+              <th pSortableColumn="assigneeDto.name">{{'serviceDesk.assignee'| translate }} <p-sortIcon field="assigneeDto.name"></p-sortIcon></th>
+              <th pSortableColumn="closedBy">{{'serviceDesk.closedByAssignee'| translate }} <p-sortIcon field="closedBy"></p-sortIcon></th>
+              <th pSortableColumn="reporter">{{'serviceDesk.closedByInitiator'| translate }} <p-sortIcon field="reporter"></p-sortIcon></th>
+              <th pSortableColumn="communicationMode">{{'serviceDesk.communicationMode'| translate }} <p-sortIcon field="communicationMode"></p-sortIcon></th>
+              <th pSortableColumn="refNumber">{{'serviceDesk.referenceNumber'| translate }} <p-sortIcon field="refNumber"></p-sortIcon></th>
+              <th pSortableColumn="comments">{{'serviceDesk.comments'| translate }} <p-sortIcon field="comments"></p-sortIcon></th>
+              <th pSortableColumn="accountDto.shortDescription">{{'serviceDesk.shortDescription'| translate }} <p-sortIcon field="accountDto.shortDescription"></p-sortIcon></th>
+              <th pSortableColumn="accountDto.physicalAddress">{{'serviceDesk.physicalAddress'| translate }} <p-sortIcon field="accountDto.physicalAddress"></p-sortIcon></th>
+              <th pSortableColumn="accountDto.emailAddress">{{'serviceDesk.email'| translate }} <p-sortIcon field="accountDto.emailAddress"></p-sortIcon></th>
+              <th pSortableColumn="accountDto.smsNumber">{{'entities.sms_number'| translate }} <p-sortIcon field="accountDto.smsNumber"></p-sortIcon></th>
+              <th pSortableColumn="ownerDto.name">{{'serviceDesk.owner'| translate }} <p-sortIcon field="ownerDto.name"></p-sortIcon></th>
+              <th pSortableColumn="solution">{{'serviceDesk.solution'| translate }} <p-sortIcon field="solution"></p-sortIcon></th>
               <th>Action</th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-requestTracking>
             <tr class="custom-table">
               <td>
-<!--                not-->
+                {{requestTracking.accountDto.name | titlecase}}
               </td>
-              <td>{{requestTracking?.requestType | titlecase}}</td>
-              <td>not</td>
+              <td>
+                <span title="{{requestTracking?.incidentDto?.name}}">
+                    {{requestTracking?.incidentDto?.name.substring(0,20) | titlecase}}
+                </span>
+              </td>
+              <td>{{requestTracking?.source | titlecase}}</td>
               <td>
                 <span title="{{requestTracking?.desc}}">
-                    {{requestTracking?.desc.substring(0,10) | titlecase}}...
-                  </span>
+                    {{requestTracking?.desc.substring(0,10) | titlecase}}
+                </span>
               </td>
               <td>{{requestTracking?.policyNo}}</td>
-              <td>{{requestTracking?.captureDate}}</td>
+              <td>{{requestTracking?.date | date: 'dd-MM-yyyy'}}</td>
               <td>
                 <span title="{{requestTracking?.summary}}">
-                    {{requestTracking?.summary.substring(0,10) | titlecase}}...
+                    {{requestTracking?.summary.substring(0,10) | titlecase}}
                 </span>
               </td>
               <td>{{requestTracking?.dueDate | date: 'dd-MM-yyyy'}}</td>
               <td>{{requestTracking?.mainStatus}}</td>
-              <td>{{requestTracking?.assignee}}</td>
+              <td>{{requestTracking?.assigneeDto?.name | titlecase}}</td>
               <td>{{requestTracking?.closedBy}}</td>
-              <td>{{requestTracking?.initiator}}</td>
+              <td>{{requestTracking?.reporter}}</td>
               <td>{{requestTracking?.communicationMode}}</td>
-              <td>{{requestTracking?.refNumber}}</td>
               <td>
-                <span title="{{requestTracking?.comments}}" *ngIf="requestTracking?.comments != null && requestTracking?.comments != ''">
-                    {{requestTracking?.comments.substring(0,10) | titlecase}}...
+                <span title="{{requestTracking?.refNumber}}" *ngIf="requestTracking?.refNumber != null && requestTracking?.refNumber != ''">
+                    {{requestTracking?.refNumber.substring(0,20)}}
                 </span>
               </td>
               <td>
-<!--                not-->
+                <span title="{{requestTracking?.comments}}" *ngIf="requestTracking?.comments != null && requestTracking?.comments != ''">
+                    {{requestTracking?.comments.substring(0,10) | titlecase}}
+                </span>
               </td>
               <td>
-<!--                not-->
+                {{requestTracking?.accountDto?.shortDescription}}
               </td>
               <td>
-<!--                not-->
+                <span title="{{requestTracking?.accountDto?.physicalAddress}}" *ngIf="requestTracking?.accountDto?.physicalAddress != null && requestTracking?.accountDto?.physicalAddress != ''">
+                    {{requestTracking?.accountDto?.physicalAddress.substring(0,15) | titlecase}}
+                </span>
               </td>
               <td>
-<!--                not-->
+                {{requestTracking?.accountDto?.emailAddress}}
               </td>
-              <td>{{requestTracking?.ownerCode}}</td>
+              <td>
+                {{requestTracking?.accountDto?.smsNumber}}
+              </td>
+              <td>{{requestTracking?.ownerDto?.name | titlecase}}</td>
+              <td>
+                <span title="{{requestTracking?.solution}}" *ngIf="requestTracking?.solution != null && requestTracking?.solution != ''">
+                    {{requestTracking?.solution.substring(0,10) | titlecase}}
+                </span>
+              </td>
               <td (click)="viewRequest(requestTracking)">
                 <i class="fa-regular fa-eye" style="font-size: 17px; cursor: pointer; color: #00529b"></i>
               </td>
@@ -204,7 +230,7 @@
 
 <!--Request tracking modal-->
 <div class="modal fade" #requestTrackingModal id="requestTrackingModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header border-bottom-0">
         <h1 class="modal-title fs-5" id="exampleModalLabel">{{'serviceDesk.serviceRequest' | translate}}</h1>
@@ -372,30 +398,16 @@
   [useDynamicContent]="true"
   [modalTitle]="'Users'"
   [zIndex]="1"
-  (actionEmitter)="processSelectedUser($event)">
+  (actionEmitter)="processSelectedUser($event)"
+  id="process-selected-user"
+>
   <div modal-body-content>
     <app-staff-modal
-      [accountType]="'USER'"
+      #staffModal
+      [accountType]="selectedUserType"
       (userSelected)="getSelectedUser($event)"
+      id="get-selected-user"
     >
     </app-staff-modal>
   </div>
 </app-dynamic-simple-modal>
-
-<!--Modal for Listing all users !-->
-<!--<app-dynamic-simple-modal
-  [modalVisible]="allUsersModalVisible"
-  [modalButtonLabel]="'Okay'"
-  [showModalButtons]="true"
-  [useDynamicContent]="true"
-  [modalTitle]="'Users'"
-  [zIndex]="1"
-  (actionEmitter)="processSelectedUser($event)">
-  <div modal-body-content>
-    <app-staff-modal
-      [accountType]="requestTrackingSortingForm.get('accountType').value"
-      (userSelected)="getSelectedUser($event)"
-    >
-    </app-staff-modal>
-  </div>
-</app-dynamic-simple-modal>-->
