--- a/src/app/features/crm/components/service-desk/request-categories/request-categories.component.html
+++ b/src/app/features/crm/components/service-desk/request-categories/request-categories.component.html
@@ -36,7 +36,7 @@
                 <i class="pi pi-pencil" (click)="editRequestCategory()"></i>
               </span>
               <span class="icon-circle">
-                <i class="fa-regular fa-trash-can" (click)="deleteRequestCategory()"></i>
+                <i class="fa-regular fa-trash-can" id="deleteRequestCategory" (click)="deleteRequestCategory()"></i>
               </span>
             </div>
           </div>
@@ -105,7 +105,7 @@
               ></span>
               <span class="icon-circle"
               ><i
-                class="fa-regular fa-trash-can"></i
+                class="fa-regular fa-trash-can" id="deleteRequestIncident" (click)="deleteRequestIncident()"></i
               ></span>
             </div>
           </div>
@@ -258,7 +258,7 @@
         </form>
       </div>
       <div class="modal-footer border-top-0">
-        <button type="button" class="btn btn-primary" (click)="saveServiceRequestCategory()">{{ 'serviceDesk.saveDetails' | translate }}</button>
+        <button type="button" class="btn btn-primary" id="saveRequestCategory" (click)="saveServiceRequestCategory()">{{ 'serviceDesk.saveDetails' | translate }}</button>
       </div>
     </div>
   </div>
@@ -448,3 +448,19 @@
     </app-staff-modal>
   </div>
 </app-dynamic-simple-modal>
+
+<app-reusable-input
+  [modalId]="'requestCategoryConfirmationModal'"
+  [title]="'Delete Confirmation'"
+  [message]="'Are you sure you want to delete this service category?'"
+  (confirmed)="confirmRequestCategoryDelete()"
+  #requestCategoryConfirmationModal
+></app-reusable-input>
+
+<app-reusable-input
+  [modalId]="'requestIncidentsConfirmationModal'"
+  [title]="'Delete Confirmation'"
+  [message]="'Are you sure you want to delete this service incident?'"
+  (confirmed)="confirmRequestIncidentsDelete()"
+  #requestIncidentsConfirmationModal
+></app-reusable-input>
