worked on VQ-3778

--- a/src/app/features/fms/components/client-search/client-search.component.css
+++ b/src/app/features/fms/components/client-search/client-search.component.css
@@ -178,3 +178,9 @@ select.form-control {
 .p-paginator .p-dropdown {
   margin-left: 10px;
 }
+
+app-horizontal-stepper {
+  min-height: 100px !important;
+  border: 2px solid blue !important;
+  background-color: white !important;
+}
