--- a/src/app/features/fms/components/client-search/client-search.component.html
+++ b/src/app/features/fms/components/client-search/client-search.component.html
@@ -24,6 +24,8 @@
       </app-dynamic-breadcrumb>
     </div>
   </div>
+  <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
+
   <div class="main-form">
     <form [formGroup]="receiptingDetailsForm">
       <h5 class="form-title">
@@ -140,13 +142,7 @@
               </tr>
             </ng-template>
             <ng-template pTemplate="body" let-client let-i="rowIndex">
-              <tr
-                [pSelectableRow]="client"
-                (click)="onClickClient(client)"
-                [class.selected-client-row]="
-                  selectedClient?.code === client.code
-                "
-              >
+              <tr [pSelectableRow]="client">
                 <td>{{ client.systemShortDesc }}</td>
                 <td>{{ client.name }}</td>
                 <td>{{ client.receiptType }}</td>
@@ -224,8 +220,12 @@
         {{ "fms.receipting.back" | translate }}
       </button>
     </div>
-    <div class="btn-next" *ngIf="canShowNextBtn">
-      <button type="button" class="btn btn-primary" (click)="onNext()">
+    <div class="btn-next" *ngIf="this.selectedClient">
+      <button
+        type="button"
+        class="btn btn-primary"
+        (click)="onClickClient(this.selectedClient)"
+      >
         {{ "fms.receipting.next" | translate }}
       </button>
       <!-- <button type="button" class="btn-primary" (click)="onNext()">Next</button> -->
