--- a/src/app/features/fms/components/receipt-preview/receipt-preview.component.html
+++ b/src/app/features/fms/components/receipt-preview/receipt-preview.component.html
@@ -24,28 +24,29 @@
       </app-dynamic-breadcrumb>
     </div>
   </div>
+  <app-stepper [currentStep]="4" [stepperData]="steps"></app-stepper>
   <h5 class="text-primary" style="padding-top: 10px">
     {{ "fms.receipting.receiptSummary" | translate }}
   </h5>
   <div class="receipt-section">
-    <pdf-viewer
+    <!-- <pdf-viewer
       [src]="filePath"
       [render-text]="true"
       [original-size]="false"
       style="margin: 20px; margin-top: 10px; width: 80%; height: 600px"
-    ></pdf-viewer>
-    <!-- <ngx-doc-viewer
+    ></pdf-viewer> -->
+    <ngx-doc-viewer
       #docViewerIframe
       [fileName]="documentData?.fileName ?? ''"
       [srcUrl]="filePath ?? ''"
       style="margin: 20px; margin-top: 10px; width: 80%"
     >
-    </ngx-doc-viewer> -->
+    </ngx-doc-viewer>
   </div>
 
   <div class="btn-actions d-flex justify-content-center gap-3 mt-3">
-    <button type="button" class="btn btn-primary" (click)="download()">
-      Download
+    <button type="button" class="btn btn-primary" (click)="updatePrintStatus()">
+      Printed
     </button>
 
     <button
@@ -53,7 +54,7 @@
       class="btn btn-success"
       (click)="navigateToReceiptCapture()"
     >
-      Exit
+      Unprinted
     </button>
   </div>
 </div>
